--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,25 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar color="secondary">
     <ion-title>
-      Tab 1
+      Simples
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content [fullscreen]="true" color="dark">
+  <ion-card>
+    <ion-item>
+    <ion-label position="floating">Primeiro valor</ion-label>
+    <ion-input></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating">Segundo valor</ion-label>
+    <ion-input></ion-input>
+  </ion-item>
+  </ion-card>
+  
+  <ion-card> 
+    
+  </ion-card>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
 </ion-content>
